hello-spk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-spk
  namespace: misthalin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-spk
  template:
    metadata:
      labels:
        app: hello-spk
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: html
          configMap:
            name: hello-spk-html
            items:
              - key: index.html
                path: index.html
