hello-spk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-spk
  namespace: misthalin
spec:
  type: ClusterIP
  selector:
    app: hello-spk
  ports:
    - name: web
      port: 80
      targetPort: http
