hello-spk/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-spk
  namespace: misthalin
  annotations:
    link.argocd.argoproj.io/external-link: https://hello-spk.s9n.no
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - hello-spk.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hello-spk
          port: 80
